Migration to OpenJDK 11.