@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>io.stockman</groupId>
+            <artifactId>stockman-domain</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
@@ -36,49 +41,6 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <!-- Remove in Java 11 -->
-                    <compilerArgument>--add-modules=jdk.incubator.httpclient</compilerArgument>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <!-- Remove in Java 11 -->
-                    <argLine>--add-modules=jdk.incubator.httpclient</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <!-- Remove in Java 11 -->
-                    <argLine>--add-modules=jdk.incubator.httpclient</argLine>
-                </configuration>
-            </plugin>
-            <plugin>
-                <!-- Remove whole plugin override in Java 11 -->
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>run-benchmarks</id>
-                        <configuration>
-                            <arguments combine.children="override">
-                                <argument>-classpath</argument>
-                                <classpath/>
-                                <argument>--add-modules=jdk.incubator.httpclient</argument>
-                                <argument>org.openjdk.jmh.Main</argument>
-                                <argument>.*</argument>
-                            </arguments>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
         </plugins>
     </build>
